--- a/action.yml
+++ b/action.yml
@@ -7,13 +7,13 @@ branding:
 inputs:
   unix_socket:
     description: The Unix socket file path
-    default: '/tmp/clamd.socket'
+    default: /tmp/clamd.socket
   tcp_port:
     description: The TCP port
-    default: '3310'
+    default: 3310
   stream_max_length:
     description: Streaming size limit
-    default: '1M'
+    default: 1M
 runs:
   using: composite
   steps:
