--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,10 @@ jobs:
   clamd_macos:
     runs-on: macos-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - name: Start ClamAV daemon clamd
-        uses: toblux/start-clamd-github-action@HEAD
+        uses: ./
       - name: Ping clamd on TCP port 3310
         run: echo PING | nc localhost 3310
       - name: Ping clamd using the Unix socket
@@ -14,8 +16,10 @@ jobs:
   clamd_ubuntu:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - name: Start ClamAV daemon clamd
-        uses: toblux/start-clamd-github-action@HEAD
+        uses: ./
       - name: Ping clamd on TCP port 3310
         run: echo PING | nc localhost 3310
       - name: Ping clamd using the Unix socket
@@ -23,7 +27,9 @@ jobs:
   clamd_windows:
     runs-on: windows-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - name: Start ClamAV daemon clamd
-        uses: toblux/start-clamd-github-action@HEAD
+        uses: ./
       - name: Test the connection to clamd on TCP port 3310
         run: Test-NetConnection -ComputerName localhost -Port 3310
