--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
   stream_max_length:
     description: Streaming size limit
     default: 1M
+  log_file:
+    description: Enable logging to the selected file
+    required: false
+    type: string
 runs:
   using: composite
   steps:
@@ -25,6 +29,10 @@ runs:
         echo DatabaseMirror database.clamav.net >> freshclam.conf
         echo TCPSocket ${{ inputs.tcp_port }} >> clamd.conf
         echo StreamMaxLength ${{ inputs.stream_max_length }} >> clamd.conf
+    - name: Add log file if needed
+      if: ${{ inputs.log_file != '' }}
+      shell: bash
+      run: echo LogFile ${{ inputs.log_file }} >> clamd.conf
     - name: Configure clamd (Linux and macOS only)
       if: runner.os != 'Windows'
       shell: bash
