--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - name: Start ClamAV daemon clamd
+      - name: Start ClamAV daemon
         uses: ./
       - name: Ping clamd on TCP port 3310
         run: echo PING | nc localhost 3310
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - name: Start ClamAV daemon clamd
+      - name: Start ClamAV daemon
         uses: ./
       - name: Ping clamd on TCP port 3310
         run: echo PING | nc localhost 3310
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - name: Start ClamAV daemon clamd
+      - name: Start ClamAV daemon
         uses: ./
       - name: Test the connection to clamd on TCP port 3310
         run: Test-NetConnection -ComputerName localhost -Port 3310
