--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Start ClamAV daemon
         uses: ./
+        with:
+          db_main: true
+          db_daily: true
       - name: Ping clamd on TCP port 3310
         run: echo PING | nc localhost 3310
       - name: Ping clamd using the Unix socket
