--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Start ClamAV daemon
         uses: ./
+        with:
+          db_main: true
+          db_daily: true
       - name: Test the connection to clamd on TCP port 3310
         run: Test-NetConnection -ComputerName localhost -Port 3310
